--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -15,7 +15,14 @@ body{
 .jumbotron {
     background-color: $white-background;
     h1 {
-        margin-bottom: 10rem;
+        margin-bottom: 5vh;
+    }
+}
+
+.flash{
+    padding: 2vh 10vw;
+    li {
+        list-style-type: none;
     }
 }
 
@@ -30,12 +37,11 @@ form{
 // typography
 h1 {
     text-align: center;
-    // margin-bottom: 30px;
 }
 
 // footer
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 50px;
