--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -33,7 +33,7 @@
                 </div>
         	<% end %>
             <div class="row">
-                <%= link_to "already a user?", '#', class: 'col-md-offset-3' %>
+                <%= link_to "already a user?", login_path, class: 'col-md-offset-3' %>
             </div>
         </div>
     </div>
