--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.post{
+    padding: 1vh 1vw;
+    .profile-pic{
+        width: 64px;
+        border-radius: 50%;
+        border: solid black;
+    }
+    .title{
+        padding-left: 1vw;
+    }
+    .item{
+        text-align: center;
+    }
+}
