added header, created new layout for login/signup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <%= render 'layouts/tags' %>
   </head>
   <body>
+    <%= render 'layouts/navbar' %>
     <div class="container">
       <%= render 'layouts/flash' %>
       <%= yield %>
