--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,10 +4,26 @@
             <%= link_to "News+", root_path, class: 'navbar-brand' %>
         </div>
         <nav>
-            <ul class='nav navbar-nav'>
-                <li class='active'><%= link_to "Home", root_path%></li>
-                <li><%= link_to "News", '#' %></li>
-                <li><%= link_to "Alex", '#' %></li>
+            <ul class='nav navbar-nav navbar-left'>
+                <li class='active'><%= link_to 'Home', root_path%></li>
+                <li class='dropdown'>
+                    <a href='#' class='dropdown-toggle' data-toggle='dropdown'>News</a>
+                    <ul class='dropdown-menu'>
+                        <li><a href='#'>Item</a></li>
+                        <li><a href='#'>Item</a></li>
+                    </ul>
+                </li>
+                <li><%= link_to 'Alex', '#' %></li>
+            </ul>
+            <ul class='nav navbar-nav navbar-right'>
+                <li class='dropdown'>
+                    <a href='#' class='profile dropdown-toggle' data-toggle='dropdown'>
+                        <%=  image_tag("https://image.flaticon.com/icons/png/512/123/123172.png", size:44, class: "img-circle", alt: "username") %>
+                    </a>
+                    <ul class='dropdown-menu'>
+                        <li><%= link_to 'Logout', logout_path, method: :delete %></li>
+                    </ul>
+                </li>
             </ul>
         </nav>
     </div>
