--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   </head>
   <body>
     <%= render 'layouts/navbar' %>
-    <div class="container">
+    <div class="main container">
       <%= render 'layouts/flash' %>
       <%= yield %>
     </div>
