--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
                         <li><a href='#'>Item</a></li>
                     </ul>
                 </li>
-                <li><%= link_to 'Alex', '#' %></li>
+                <li><%= link_to current_user.username, '#' %></li>
             </ul>
             <ul class='nav navbar-nav navbar-right'>
                 <li class='dropdown'>
