--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,9 @@
   </head>
   <body>
     <%= render 'layouts/navbar' %>
-    <div class="main container">
+    <div class="main container-fluid">
       <%= render 'layouts/flash' %>
-      <%= yield %>
+        <%= yield %>
     </div>
     <%= render 'layouts/footer' %>
   </body>
