--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,9 @@
 <div class='main-section col-md-9'>
     <%= render 'posts/homepage/filters' %>
     <div class='posts'>
-        <%= render 'post' %>
+        <% @posts.each do |post| %>
+            <%= render partial: 'post', locals: {post: post} %>
+        <% end %>
     </div>
 </div>
 <div class='sidebar col-md-3'>
