--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,17 +13,21 @@
                         <li><a href='#'>Item</a></li>
                     </ul>
                 </li>
-                <li><%= link_to current_user.username, '#' %></li>
+                <li><% if logged_in? %><%= link_to current_user.username, '#' %><% end %></li>
             </ul>
             <ul class='nav navbar-nav navbar-right'>
-                <li class='dropdown'>
-                    <a href='#' class='profile dropdown-toggle' data-toggle='dropdown'>
-                        <%=  image_tag("https://image.flaticon.com/icons/png/512/123/123172.png", size:44, class: "img-circle", alt: "username") %>
-                    </a>
-                    <ul class='dropdown-menu'>
-                        <li><%= link_to 'Logout', logout_path, method: :delete %></li>
-                    </ul>
-                </li>
+                <% if logged_in? %>
+                    <li class='dropdown'>
+                        <a href='#' class='profile dropdown-toggle' data-toggle='dropdown'>
+                            <%=  image_tag("https://image.flaticon.com/icons/png/512/123/123172.png", size:44, class: "img-circle", alt: "username") %>
+                        </a>
+                        <ul class='dropdown-menu'>
+                            <li><%= link_to 'Logout', logout_path, method: :delete %></li>
+                        </ul>
+                    </li>
+                <% else %>
+                    <%= link_to image_tag("https://image.flaticon.com/icons/png/512/123/123172.png", size:44, class: "img-circle", alt: "username"), login_path %>
+                <% end %>
             </ul>
         </nav>
     </div>
