created new post view and related methods

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -18,6 +18,10 @@ $highlight-color: #337ab7;
     }
 }
 
+.post-form{
+    margin: 1vh 3vw;
+}
+
 .sorters{
     margin-bottom: 2vh;
     .selected{
