--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,28 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.user-profile{
+    .user-activity{
+        padding: 3vh;
+        .activity{
+            padding-right: 10px;
+            padding-left: 10px;
+            .panel{
+                height: 49vh;
+            }
+        }
+    }
+    .post-activity{
+        p{
+            margin: 0;
+        }
+        .post-title{
+            font-weight: bolder;
+        }
+        .post-date{
+            font-weight: lighter;
+        }
+    }
+}
