--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -7,7 +7,7 @@
             <h3><%= post.title %></h3>
         </div>
         <div class="row">
-            <div class='item col-md-2'><%= post.user.username %></div>
+            <div class='item col-md-2'><%= link_to post.user.username, post.user %></div>
             <div class='item col-md-2'><%= post.created_at %></div>
             <div class='item col-md-2'><%= post.topic %></div>
             <div class='item col-md-1 col-md-offset-4'><%= fa_icon "comments", text: 36 %></div>
