--- a/app/views/posts/homepage/sidebar/_recent_icon.html.erb
+++ b/app/views/posts/homepage/sidebar/_recent_icon.html.erb
@@ -1,4 +1,6 @@
 <div class='col-md-4 user'>
-    <p><%= image_tag("https://image.flaticon.com/icons/png/512/123/123172.png", size: "64", alt: "username", class: "recent-pic") %></p>
-    <p class='name'><%= user[:username] %></p>
+    <%= link_to User.find(user[:id]), action: 'go' do %>
+        <p><%= image_tag("https://image.flaticon.com/icons/png/512/123/123172.png", size: "64", alt: "username", class: "recent-pic") %></p>
+        <p class='name'><%= user[:username] %></p>
+    <% end %>
 </div>
