--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -4,7 +4,7 @@
     </div>
     <div class="content col-md-11">
         <div class="title row">
-            <h3><%= post.title %></h3>
+            <h3><%= link_to post.title, post %></h3>
         </div>
         <div class="row">
             <div class='item col-md-2'><%= link_to post.user.username, post.user %></div>
