--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,14 +19,14 @@
                 <% if logged_in? %>
                     <li class='dropdown'>
                         <a href='#' class='profile dropdown-toggle' data-toggle='dropdown'>
-                            <%=  image_tag("https://image.flaticon.com/icons/png/512/123/123172.png", size:44, class: "img-circle", alt: "username") %>
+                            <%=  user_image(current_user, 44) %>
                         </a>
                         <ul class='dropdown-menu'>
                             <li><%= link_to 'Logout', logout_path, method: :delete %></li>
                         </ul>
                     </li>
                 <% else %>
-                    <%= link_to image_tag("https://image.flaticon.com/icons/png/512/123/123172.png", size:44, class: "img-circle", alt: "username"), login_path %>
+                    <%= link_to default_image(44), login_path %>
                 <% end %>
             </ul>
         </nav>
