--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 <div class="post panel row">
     <div class="photo col-md-1">
-        <h2><%= image_tag("https://image.flaticon.com/icons/png/512/123/123172.png", size: "64", alt: "username", class: "profile-pic") %></h2>
+        <h2><%= user_image(post.user, 64) %></h2>
     </div>
     <div class="content col-md-11">
         <div class="title row">
@@ -10,7 +10,7 @@
             <div class='item col-md-2'><%= link_to post.user.username, post.user %></div>
             <div class='item col-md-2'><%= post.created_at %></div>
             <div class='item col-md-2'><%= post.topic %></div>
-            <div class='item col-md-1 col-md-offset-4'><%= fa_icon "comments", text: 36 %></div>
+            <div class='item col-md-1 col-md-offset-4'><%= fa_icon "comments", text: 0 %></div>
             <div class='item col-md-1'><%= fa_icon "eye", text: post.views %></div>
         </div>
     </div>
