--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -50,7 +50,7 @@ $backdrop-color: hsla(0, 0%, 0%, 0.13);
 
     .post-user{
         display: flex;
-        align-items: center; /* align vertical */
+        align-items: center;
         margin-top: 2vh;
         padding: 2vh 2vw;
         background-color: $backdrop-color;
