--- a/app/views/users/settings/_settings-side.html.erb
+++ b/app/views/users/settings/_settings-side.html.erb
@@ -12,6 +12,6 @@
         <%= link_to fa_icon('reply', text: "Comments to me"), user_replies_path(@user) %>
     </div>
     <div class="row">
-        <%= link_to fa_icon('cog', text: "Settings"), '#' %>
+        <%= link_to fa_icon('cog', text: "Settings"), edit_user_path(@user) %>
     </div>
 </div>
