--- a/app/views/users/posts.html.erb
+++ b/app/views/users/posts.html.erb
@@ -1,8 +1,25 @@
 <%= render layout: 'users/settings/settings' do %>
-    <div class="well">
+    <div class="user-posts well">
+        <h2 class='text-info title'>My Posts</h2>
         <% @user.posts.order(:created_at).each do |post| %>
             <div class="panel">
-                <h3><%= post.title %></h3>
+                <div class="row">
+                    <div class="detail col-md-6">
+                        <h3><%= link_to post.title, post %></h3>
+                    </div>
+                    <div class="detail col-md-1">
+                        <span class='topic'><%= post.topic %></span>
+                    </div>
+                    <div class="detail col-md-2">
+                        <%= post.created_at %>
+                    </div>
+                    <div class="detail col-md-1">
+                        <%= fa_icon "eye", text: post.views %>
+                    </div>
+                    <div class="detail col-md-1">
+                        <%= fa_icon "comments", text: 0 %>
+                    </div>
+                </div>
             </div>
         <% end %>
     </div>
