--- a/app/views/users/posts.html.erb
+++ b/app/views/users/posts.html.erb
@@ -17,7 +17,7 @@
                         <%= fa_icon "eye", text: post.views %>
                     </div>
                     <div class="detail col-md-1">
-                        <%= fa_icon "comments", text: 0 %>
+                        <%= fa_icon "comments", text: post.comments.size %>
                     </div>
                 </div>
             </div>
