--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -65,6 +65,12 @@ $backdrop-color: hsla(0, 0%, 0%, 0.13);
         padding: 2vh 3vw;
         font-size: smaller;
     }
+
+    .post-comments{
+        .comment-list{
+            margin-top: 5vh;
+        }
+    }
 }
 
 .sorters{
