--- a/app/views/users/comments.html.erb
+++ b/app/views/users/comments.html.erb
@@ -1,4 +1,22 @@
 <%= render layout: 'users/settings/settings' do %>
-    <div class="well">
+    <div class="user-comments well">
+        <h2 class='text-info title'>My Comments</h2>
+        <% @user.comments.order(:created_at).each do |comment| %>
+            <div class="panel">
+                <div class="row">
+                    <div class="detail col-md-6">
+                        <h3><%= link_to comment.post.title, comment.post %></h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="detail col-md-10">
+                        <%= comment.content %>
+                    </div>
+                    <div class="detail col-md-2">
+                        <%= comment.created_at %>
+                    </div>
+                </div>
+            </div>
+        <% end %>
     </div>
 <% end %>
