--- a/app/views/users/replies.html.erb
+++ b/app/views/users/replies.html.erb
@@ -1,4 +1,32 @@
 <%= render layout: 'users/settings/settings' do %>
-    <div class="well">
+    <div class="user-replies well">
+        <h2 class='text-info title'>My Received Comments</h2>
+        <% @user.posts.order(:created_at).each do |post| %>
+            <% post.comments.order(:created_at).each do |comment| %>
+                <div class="row panel">
+                    <div class="col-md-1">
+                        <%= user_image(comment.user, 96) %>
+                    </div>
+                    <div class="col-md-11">
+                        <div class="row">
+                            <div class="detail col-md-6">
+                                <h3><%= link_to comment.post.title, comment.post %></h3>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="detail col-md-2">
+                                <%= link_to comment.user.username, comment.user %>
+                            </div>
+                            <div class="detail col-md-8">
+                                <%= comment.content %>
+                            </div>
+                            <div class="detail col-md-2">
+                                <%= comment.created_at %>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            <% end %>
+        <% end %>
     </div>
 <% end %>
