--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -47,7 +47,7 @@
                 <% @post.comments.each do |comment| %>
                     <div class="panel">
                         <div class="row">
-                            <div class="col-md-9">
+                            <div class="col-md-9 comment-content">
                                 <%= comment.content %>
                             </div>
                             <div class="col-md-1">
