--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
             <%= user_image(@user, 128) %>
         </div>
         <div class="row col-md-12">
-            <h3><%= @user.username %></h3>
+            <h3 class='username'><%= @user.username %></h3>
         </div>
         <div class="row">
             <h4 class='col-md-2 col-md-offset-4'><%= fa_icon "calendar", text: @user.created_at.strftime("%Y-%m-%d") %></h4>
