added password reset, remember, and search functionality

--- a/app/assets/stylesheets/password_reset.scss
+++ b/app/assets/stylesheets/password_reset.scss
@@ -1,6 +1,6 @@
-// Place all the styles related to the Sessions controller here.
+// Place all the styles related to the PasswordReset controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.adv-login{
-    margin: 0.5vh 0;
+.back-button{
+    margin-top: 1vh;
 }
