--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
                         <li><a href='#'>Item</a></li>
                     </ul>
                 </li>
-                <li><% if logged_in? %><%= link_to current_user.username, '#' %><% end %></li>
+                <li><% if logged_in? %><%= link_to current_user.username, current_user %><% end %></li>
             </ul>
             <ul class='nav navbar-nav navbar-right'>
                 <% if logged_in? %>
