--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -34,6 +34,10 @@
             <div class="new-comment">
                 <h2>Comments</h2>
                 <%= form_with(url: post_comments_path(@post), class:'form-horizontal comment-form', local: true) do |f| %>
+                    <%= hidden_field_tag :reply, nil, class: 'reply-hdn' %>
+                    <div class="replying" hidden=true >
+                        This is a test
+                    </div>
                     <div class="form-group">
                         <%= f.text_area     :content, placeholder: 'Enter your comment here', rows: '5', class: 'form-control' %>
                     </div>
@@ -45,19 +49,7 @@
             </div>
             <div class="comment-list">
                 <% @post.comments.each do |comment| %>
-                    <div class="panel">
-                        <div class="row">
-                            <div class="col-md-9 comment-content">
-                                <%= comment.content %>
-                            </div>
-                            <div class="col-md-1">
-                                <%= link_to comment.user.username, comment.user %>
-                            </div>
-                            <div class="col-md-2">
-                                <%= comment.created_at %>
-                            </div>
-                        </div>
-                    </div>
+                    <%= render partial: 'comment', locals: {comment: comment} %>
                 <% end %>
             </div>
         </div>
